fix CSS columns on Safari

--- a/assets/sass/layout/session.scss
+++ b/assets/sass/layout/session.scss
@@ -162,6 +162,7 @@ category: TDH Justice Juvenile - Session
     margin-top: 0;
     margin-bottom: 15px;
     position: relative;
+    display: inline-block;
     & .pull-left.glyphicon {
       padding-right: 5px;
     }
